{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 83,
  "lineage": "29055f9d-6e9f-5345-4b45-9f3c0d753f07",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-081090cf049d7b0ff",
            "arn": "arn:aws:ec2:us-east-2:049618906704:elastic-ip/eipalloc-081090cf049d7b0ff",
            "domain": "vpc",
            "id": "eipalloc-081090cf049d7b0ff",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-189-25-231.us-east-2.compute.amazonaws.com",
            "public_ip": "18.189.25.231",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2",
            "tags": {
              "Name": "MyTerraformNatGatewayEIP"
            },
            "tags_all": {
              "Name": "MyTerraformNatGatewayEIP"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_private_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0133f9d4af72da4d0",
            "arn": "arn:aws:ec2:us-east-2:049618906704:instance/i-097e49840119c3a1d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-097e49840119c3a1d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0776201ece6a4226c",
            "private_dns": "ip-10-0-2-141.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.141",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07d9eeaf5ce8b1927",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0079b8ff1df12e6c1",
            "tags": {
              "Name": "MyPrivateApacheEC2"
            },
            "tags_all": {
              "Name": "MyPrivateApacheEC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-053e8ecd376e2ce72"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.my_private_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0133f9d4af72da4d0",
            "arn": "arn:aws:ec2:us-east-2:049618906704:instance/i-0d5e076f26a419f9f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d5e076f26a419f9f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08e25c13469a3daa1",
            "private_dns": "ip-10-0-1-90.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.90",
            "public_dns": "ec2-3-144-47-69.us-east-2.compute.amazonaws.com",
            "public_ip": "3.144.47.69",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dbaa414a1f2b4cec",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d4be9e86b0f70cfe",
            "tags": {
              "Name": "MyPublicWebserverEC2"
            },
            "tags_all": {
              "Name": "MyPublicWebserverEC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-053e8ecd376e2ce72"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.my_public_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:049618906704:internet-gateway/igw-02f9c9a827bb07581",
            "id": "igw-02f9c9a827bb07581",
            "owner_id": "049618906704",
            "region": "us-east-2",
            "tags": {
              "Name": "MyTerraformIGW"
            },
            "tags_all": {
              "Name": "MyTerraformIGW"
            },
            "vpc_id": "vpc-00c326eab2b35ec75"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-081090cf049d7b0ff",
            "association_id": "eipassoc-022641840ac58f5fa",
            "connectivity_type": "public",
            "id": "nat-09ef12f9130429fad",
            "network_interface_id": "eni-0dea51d859721f6ed",
            "private_ip": "10.0.1.56",
            "public_ip": "18.189.25.231",
            "region": "us-east-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d4be9e86b0f70cfe",
            "tags": {
              "Name": "MyTerraformNatGateway"
            },
            "tags_all": {
              "Name": "MyTerraformNatGateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.my_igw",
            "aws_subnet.my_public_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:049618906704:route-table/rtb-02ff0a5808b6ed283",
            "id": "rtb-02ff0a5808b6ed283",
            "owner_id": "049618906704",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09ef12f9130429fad",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MyTerraformPrivateRT"
            },
            "tags_all": {
              "Name": "MyTerraformPrivateRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c326eab2b35ec75"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.my_igw",
            "aws_nat_gateway.my_nat_gateway",
            "aws_subnet.my_public_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:049618906704:route-table/rtb-087ab1479abc23b9f",
            "id": "rtb-087ab1479abc23b9f",
            "owner_id": "049618906704",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02f9c9a827bb07581",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MyTerraformPublicRT"
            },
            "tags_all": {
              "Name": "MyTerraformPublicRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c326eab2b35ec75"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0905f98585adfdb06",
            "region": "us-east-2",
            "route_table_id": "rtb-02ff0a5808b6ed283",
            "subnet_id": "subnet-0079b8ff1df12e6c1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.my_igw",
            "aws_nat_gateway.my_nat_gateway",
            "aws_route_table.my_private_route_table",
            "aws_subnet.my_private_subnet",
            "aws_subnet.my_public_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d819072ffa7bc5ca",
            "region": "us-east-2",
            "route_table_id": "rtb-087ab1479abc23b9f",
            "subnet_id": "subnet-0d4be9e86b0f70cfe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.my_public_route_table",
            "aws_subnet.my_public_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:049618906704:security-group/sg-053e8ecd376e2ce72",
            "description": "Allow inbound HTTP, SSH, and ICMP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-053e8ecd376e2ce72",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP inbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH inbound",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow ICMP (Ping) from VPC",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "terraform-web-sg-http-ssh-icmp",
            "name_prefix": "",
            "owner_id": "049618906704",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WebSecurityGroup"
            },
            "tags_all": {
              "Name": "WebSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c326eab2b35ec75"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:049618906704:subnet/subnet-0079b8ff1df12e6c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0079b8ff1df12e6c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "049618906704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "MyTerraformPrivateSubnet"
            },
            "tags_all": {
              "Name": "MyTerraformPrivateSubnet"
            },
            "vpc_id": "vpc-00c326eab2b35ec75"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:049618906704:subnet/subnet-0d4be9e86b0f70cfe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4be9e86b0f70cfe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "049618906704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "MyTerraformPublicSubnet"
            },
            "tags_all": {
              "Name": "MyTerraformPublicSubnet"
            },
            "vpc_id": "vpc-00c326eab2b35ec75"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:049618906704:vpc/vpc-00c326eab2b35ec75",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06aa7b9a15dfe51e1",
            "default_route_table_id": "rtb-0a640324e42e18299",
            "default_security_group_id": "sg-042bbd1ce2e8b0e44",
            "dhcp_options_id": "dopt-07b7c423d8f1f0ee4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00c326eab2b35ec75",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a640324e42e18299",
            "owner_id": "049618906704",
            "region": "us-east-2",
            "tags": {
              "Name": "MyTerraformVPC"
            },
            "tags_all": {
              "Name": "MyTerraformVPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}